# studLLM

./: .gitignore  README.md
backend/: main.py
backend/DB_ops/: main.py  test.py
backend/agent/studllm/: pyproject.toml
backend/agent/studllm/src/studllm/: crew.py  main.py
backend/agent/studllm/src/studllm/config/: agents.yaml  get_llm.py  tasks.yaml
backend/app/models/: request.py  response.py
backend/app/routers/: ai_response.py
backend/langcahin_agent/: main.py  main2.py  tool_calling_aget_langgraph.ipynb
backend/langcahin_agent/helpers/: get_llm.py
backend/langcahin_agent/prompts/: prompts.yaml
backend/langcahin_agent/tools/: jobs.py  state_tool.py  tools.py  user_things.py
frontend/: index.html  script.js  styles.css
learnings/: lang_learn.ipynb  tool_calling_aget_langgraph.ipynb
server/: client_secret.json  run.py
server/app/: __init__.py  config.py  models.py  oauth.py  routes.py
server/app/static/: scripts.js  styles.css
server/app/templates/: index.html  indexq.html  login.html
